--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Admin Backend",
   "main": "index.js",
+  "engines": {
+    "node": "18.13.0"
+  },
   "scripts": {
-    "start": "nodemon --inspect src/index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
