--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Admin Backend",
   "main": "index.js",
   "engines": {
-    "node": "18.13.0"
+    "node": "18.x"
   },
   "scripts": {
     "start": "node src/index.js",
