--- a/.env
+++ b/.env
@@ -14,3 +14,6 @@ BASE_ADMIN_URL=http://127.0.0.1:3000
 
 API_MOVIE_URL=https://api.themoviedb.org/3/movie/
 API_MOVIE_KEY=043ea53b0f115cd3997dcbb3f8a46a1a
+
+CONNECT_MONGODB_URL=mongodb+srv://haiduongfc2001:kzkpkgerfwyannjt@cluster0.oeqsotm.mongodb.net/admin_database
+CONNECT_MONGODB_LOCAL=mongodb://127.0.0.1:27017/admin_database
